--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ docs_dir: docs
 nav: 
   - Accueil : index.md
   - Web : ./Web/index.md
-  # - Réseaux Sociaux : ./RS/index.md
+  - Réseaux Sociaux : ./RS/index.md
   # - Données structurées : ./DS/index.md
   # - Photo numérique : ./PN/index.md
   - Ressources : ressources.md
