--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
   - Accueil : index.md
   - Web : ./Web/index.md
   - Réseaux Sociaux : ./RS/index.md
-  # - Données structurées : ./DS/index.md
+  - Données structurées : ./DS/index.md
   # - Photo numérique : ./PN/index.md
   - Ressources : ressources.md
     
